data/derived/fa15/progs/unify/prog3338.ml.out
Characters 79-80:
  |h::t -> [remainder i t] @ mulByDigit i t;;
                        ^
Error: This expression has type 'a list
       but an expression was expected of type int
